[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.6",
    "openpyxl>=3.1.0",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "streamlit>=1.28.0",
]
